src/styles/searchBar.css
/* Subhead - SearchBar */

.search-bar {
  height: 4em;
  left: 1.5em;
  right: 3.5em;
  text-align: center;
  
  margin: 0em;
  padding: 0em;
}

/* Frame 12 */

/* Auto Layout */
.news-filters-dp {
  margin: 0em;
  padding: 0em;
  text-decoration: none;
  height: 2.4em;
  width: 11em;
  /* Button */

  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;

  /* identical to box height */

  letter-spacing: 0.0125em;
  text-transform: uppercase;
  /* Purple */
  border-radius: 5px;
}

.news-filters-btn {
  margin-top: 0em;
}

#news-filters {
  width: 18%;
  height: 2.6em;
  margin-top: -0.2em;
  margin-left: -10.8em;
  text-align: center;

  /* Button */

  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 1em;
  line-height: 2.8em;
  /* identical to box height */

  letter-spacing: 0.0125em;
  text-transform: uppercase;

  /* Purple */
  color: #ffffff;
  background: #2c1c59;
  border-radius: 5px;
}

.news-filters-i {
  /* Vector */

  padding: 0.5em;

  /* White */

  color: #ffffff;
}

/* Frame 67 */

.news-filters {
  /* Auto Layout */

  position: static;
  height: 1.2em;
  text-align: center;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 0px;
  font-family: Montserrat;
  margin-top: -1.6em;

  /* White */

  color: #ffffff;

  /* Inside Auto Layout */

  flex: none;
  order: 0;
  align-self: center;
  flex-grow: 0;
}

.news-filter-dropdown {
  overflow-x: hidden;
  background: #2c1c59;
  box-sizing: border-box; /* or not */
  margin: 0 auto;
  width: 60em;
  height: 30em;
  background: #f2f2f2;
  padding: 1.5rem;
  text-align: left;
}

/* Subhead Menu Text */

/* Group 68 */

.group-68 {
  margin: 0em;
  padding: 0em;
  position: relative;
  height: 1.2em;
  font-weight: bold;
  justify-content: space-between;
  width: 90%;
}

/* HOT TOPICS */
.hot-topics {
  position: flex;
  padding: 0em 2em 0em 5em;
  font-family: Montserrat;
  color: #2c1c59;
}

/* SearchBar Text */
.search-bar-text {
  position: relative;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 600;
  font-size: 1em;
  line-height: 1.6em;

  /* identical to box height */

  letter-spacing: 0.001em;

  /* Black - Text Color */

  color: #1e1e1e;
}

/* Search */

.search {
  right: 3em;
  top: 0.4em;
  height: 2.8em;
  border-radius: 0.25rem;
  width: 80%;
  padding: 0em 0em 0em 1.5em;
  background-color: #ffffff;

  /* Search input */
  font-family: Montserrat;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;

  /* identical to box height */
  letter-spacing: 0.0125em;
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0.5);
}

/* Vector */
.search-i {
  position: relative;
  z-index: 1;
  top: -0.2em;
  left: -5em;

  color: #000000;;

  cursor: pointer;
  width: 0;
  /* True Black */

  /* background: #000000; */
}

